Sitenin index kısmı için de html ve css kodları yazıldı. Site yayınlanmaya hazır.

--- a/css/login.css
+++ b/css/login.css
@@ -6,7 +6,7 @@
 
 body{
     margin: 0 100px;
-    background-color: #FFFAEC;
+    background-color: #FFF2F2;
     font-family: sans-serif;
   }
 
@@ -20,7 +20,7 @@ body{
     text-align: center;
     width: 420px;
     height: 400px;
-    background: #f854a4;
+    background: #f888a4;
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
