--- a/css/signUp.css
+++ b/css/signUp.css
@@ -5,7 +5,7 @@
 }
 body{
     margin: 0 100px;
-    background-color: #FFFAEC;
+    background-color: #FFF2F2;
     font-family: sans-serif;
   }
   
@@ -19,7 +19,7 @@ body{
     text-align: center;
     width: 420px;
     height: 500px;
-    background: #f854a4;
+    background: #f888a4;
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
